# Messeager

./: .gitignore  CMakeLists.txt  README.md  log.txt
Database/: CMakeLists.txt  database_global.h  databasecheck.cpp  databasecheck.h  databasecore.cpp  databasecore.h  databasemanager.cpp  databasemanager.h  groupchatdatabase.cpp  groupchatdatabase.h  peerdatabase.cpp  peerdatabase.h  privatechatdatabase.cpp  privatechatdatabase.h
IPMSG/: .qmlls.ini  CMakeLists.txt  chat.cpp  chat.h  common.h  groupchat.cpp  groupchat.h  main.cpp  p2p.cpp  p2p.h  peer.cpp  peer.h  privatechat.cpp  privatechat.h  translatefile.cpp  translatefile.h
Messager/: CMakeLists.txt  ChatPanel.qml  InputPanel.qml  InviteUserInterface.qml  Main.qml  MessageWindow.qml  PeerPanel.qml  Window.qml  appcontroller.cpp  appcontroller.h  databasemanager.cpp  databasemanager.h  main.cpp
doc/: Messager项目团队开发汇报.pptx  Messager项目开发文档.docx
qml/: .gitignore  CMakeLists.txt  ChatPanel.qml  GroupMemberListView.qml  InputPanel.qml  InviteUserInterface.qml  Login.qml  PeerPanel.qml  Window.qml  appcontroller.cpp  appcontroller.h  main.cpp
work/: .log.txt.kate-swp  Messager.vpp  log.txt  需求文档.docx  需求文档.txt
